--- a/.gitmodules
+++ b/.gitmodules
@@ -149,6 +149,6 @@
 [submodule "bundle/vim-gocode-blackrush"]
 	path = bundle/vim-gocode-blackrush
 	url = git@github.com:Blackrush/vim-gocode.git
-[submodule ".vim/bundle/puppet"]
-	path = .vim/bundle/puppet
+[submodule "bundle/puppet"]
+	path = bundle/puppet
 	url = git://github.com/rodjek/vim-puppet.git
