--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,6 @@
 [submodule "bundle/vim-buggergator"]
 	path = bundle/vim-buffergator
 	url = https://github.com/jeetsukumaran/vim-buffergator
+[submodule "bundle/syntastic"]
+	path = bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
