--- a/.gitmodules
+++ b/.gitmodules
@@ -161,3 +161,6 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "bundle/vim-diff-enhanced"]
+	path = bundle/vim-diff-enhanced
+	url = https://github.com/chrisbra/vim-diff-enhanced.git
