--- a/.gitmodules
+++ b/.gitmodules
@@ -167,3 +167,6 @@
 [submodule "bundle/vim-go"]
 	path = bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "bundle/fish.vim"]
+	path = bundle/fish.vim
+	url = https://github.com/Soares/fish.vim.git
