--- a/.gitmodules
+++ b/.gitmodules
@@ -170,3 +170,6 @@
 [submodule "bundle/fish.vim"]
 	path = bundle/fish.vim
 	url = https://github.com/Soares/fish.vim.git
+[submodule "bundle/gruvbox"]
+	path = bundle/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
